<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_numbers"
        >
        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_artists" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_family">
        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_albums" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_colors">
        <TextView
            android:id="@+id/videos"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_videos" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_phrases">
        <TextView
            android:id="@+id/songs"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_songs" />
    </FrameLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="100dp">



        <FrameLayout
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:background="@color/category_numbers"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            >
            <TextView
                android:id="@+id/gender"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_gender" />
        </FrameLayout>



        <FrameLayout
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:background="@color/category_family"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/types"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_types" />
        </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:background="@color/category_colors"
            android:layout_margin="16dp"
            >

            <TextView
                android:id="@+id/genre"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_genre" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:background="@color/category_phrases"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/language"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_language" />
        </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>